export const snapshot = {};

snapshot[`compilers/esbuild > Successful JSX build 1`] = `
'// lib/component.jsx
import { jsx } from "https://esm.sh/react@18.2.0/jsx-runtime";
var Component = () => {
  return /* @__PURE__ */ jsx("div", {
    children: "Hello"
  });
};
var component_default = Component;
export {
  component_default as default
};
'
`;

snapshot[`compilers/esbuild > Import bare module 1`] = `
'// lib/import_node_module.js
import myPackage from "/node_modules/mypackage/index.js";
var import_node_module_default = () => {
  myPackage();
};
export {
  import_node_module_default as default
};
'
`;

snapshot[`compilers/esbuild > allows unknown bare module 1`] = `
'// lib/import_unknown_node_module.js
import unknown from "unknown";
var import_unknown_node_module_default = () => {
  unknown();
};
export {
  import_unknown_node_module_default as default
};
'
`;

snapshot[`compilers/esbuild > Import relative module 1`] = `
'// lib/import_relative_module.js
import "/lib/foo.js";
'
`;

snapshot[`compilers/esbuild > Import absolute module 1`] = `
'// lib/import_absolute_module.js
import "/lib/foo.js";
'
`;

snapshot[`compilers/esbuild > Import remote module 1`] = `
'// lib/import_remote_module.js
import axios from "https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js";
'
`;

snapshot[`compilers/esbuild > import map 1`] = `
'// lib/import_map.js
import axios from "https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js";
import { createElement } from "https://esm.sh/react@18.2.0";
import foo from "/lib/foo.js";
axios();
foo();
createElement();
import("https://esm.sh/solid@0.2.1");
'
`;

snapshot[`compilers/esbuild > Import relative module without extension 1`] = `
'// lib/import_relative_module_without_extension.js
import foo from "/lib/foo.js";
'
`;

snapshot[`compilers/esbuild > Import absolute module without extension 1`] = `
'// lib/import_absolute_module_without_extension.js
import foo from "/lib/foo.js";
'
`;

snapshot[`compilers/esbuild > Import css module from JS 1`] = `
'// importStylesheet:/lib/styles.module.css
import { importCssModule } from "/proscenium-runtime/import_css.js";
var styles_module_default = await importCssModule("/lib/styles.module.css");

// lib/import_css_module.js
console.log(styles_module_default);
'
`;

snapshot[`compilers/esbuild > Import css from JS 1`] = `
'// importStylesheet:/app/views/layouts/application.css
import { appendStylesheet } from "/proscenium-runtime/import_css.js";
appendStylesheet("/app/views/layouts/application.css");
'
`;

snapshot[`compilers/esbuild > Import css from jsx 1`] = `
'// importStylesheet:/app/views/layouts/application.css
import { appendStylesheet } from "/proscenium-runtime/import_css.js";
appendStylesheet("/app/views/layouts/application.css");
'
`;

snapshot[`compilers/esbuild > bundled js import 1`] = `
'// lib/foo.js?bundle
console.log("/lib/foo.js");

// lib/foo2.js?bundle
console.log("/lib/foo2.js");

// lib/foo3.js?bundle
console.log("/lib/foo3.js");

// node_modules/mypackage/index.js?bundle
console.log("node_modules/mypackage");

// ../../lib/proscenium/runtime/component_manager/index.js?bundle
async function init() {
  const elements = document.querySelectorAll("[data-component]");
  if (elements.length < 1)
    return;
  const { default: renderComponent } = await import("/proscenium-runtime/component_manager/render_component.jsx");
  Array.from(elements, (ele) => {
    const data = JSON.parse(ele.getAttribute("data-component"));
    let isVisible = false;
    const observer = new IntersectionObserver((entries) => {
      entries.forEach((entry) => {
        if (!isVisible && entry.isIntersecting) {
          isVisible = true;
          observer.unobserve(ele);
          renderComponent(ele, data);
        }
      });
    });
    observer.observe(ele);
  });
}

// lib/import_proscenium_component_manager.js?bundle
init();

// lib/component.jsx?bundle
import { jsx } from "https://esm.sh/react@18.2.0/jsx-runtime";
var Component = () => {
  return /* @__PURE__ */ jsx("div", {
    children: "Hello"
  });
};
var component_default = Component;

// lib/bundle_import.js
component_default();
'
`;

snapshot[`compilers/esbuild > bundled css import 1`] = `
"/* httpBundle:https://esm.sh/@radix-ui/colors@0.1.8/blue.css?bundle */
:root {
  --blue1: hsl(206, 100%, 99.2%);
  --blue2: hsl(210, 100%, 98.0%);
  --blue3: hsl(209, 100%, 96.5%);
  --blue4: hsl(210, 98.8%, 94.0%);
  --blue5: hsl(209, 95.0%, 90.1%);
  --blue6: hsl(209, 81.2%, 84.5%);
  --blue7: hsl(208, 77.5%, 76.9%);
  --blue8: hsl(206, 81.9%, 65.3%);
  --blue9: hsl(206, 100%, 50.0%);
  --blue10: hsl(208, 100%, 47.3%);
  --blue11: hsl(211, 100%, 43.2%);
  --blue12: hsl(211, 100%, 15.0%);
}

/* lib/foo.css?bundle */
body {
  color: red;
}
body h1 {
  color: #00f;
}

/* lib/bundle_import.css */
header {
  color: pink;
}
"
`;
